# playku

./: .gitignore  Cargo.toml  build.rs  register_playku.reg  setup_mpv.ps1  setup_ui.ps1
mpv_config/: input.conf  mpv.conf
mpv_config/script-opts/: uosc.conf
mpv_config/scripts/: resize.lua
playku-extension/: package.json
playku-extension/entrypoints/: youtube.content.ts
src/: lib.rs  main.rs  player.rs  youtube.rs
